--- a/html/index.html
+++ b/html/index.html
@@ -248,8 +248,8 @@
         $('.get-token').html(localToken);
         //alert('获取到的token为'+token);
     }
-    /*var token=locationSearcher('token');
-     localStorage.setItem('token',token);*/
+    var token=locationSearcher('token');
+     localStorage.setItem('token',token);
 
     $(document).ready(function () {
         //轮播图
