--- a/html/my.html
+++ b/html/my.html
@@ -127,7 +127,7 @@
 <script>
     if (C.marketToken=='null'||C.marketToken==undefined){
         alert('请重新登录');
-        location.href='login.html';
+        //location.href='login.html';
     }
     var a=$('#my-template').html();
     var b=Handlebars.compile(a);
