--- a/html/myShop.html
+++ b/html/myShop.html
@@ -68,9 +68,9 @@
                 <a href="goodsdetail.html?producdId={{id}}" class="display-box">
                     <div class="dis-list-box" data-shopid="{{id}}" data-productid="{{productId}}">
                         <div class="dis-shop-img">
-                            <img src="../images/lazy-img.jpg" data-src="{{mainImageUrl}}" alt="">
+                            <img src="../images/lazy.gif" data-src="{{mainImageUrl}}" alt="">
                             <div class="earn">
-                                <span>共赚<span>{{profit}}</span>元</span>
+                                <span>共赚{{profit}}元</span>
                             </div>
                         </div>
                         <div class="dis-list-content">
