--- a/html/myShop.html
+++ b/html/myShop.html
@@ -46,18 +46,20 @@
                     <div class="dis-screen-price">
                         <div class="dis-price-section">价格区间</div>
                         <div class="dis-screen-select">
-                            <div class="dis-low-price">最低价</div>
+                            <input type="number" class="dis-low-price" placeholder="最低价">
                             <div class="dis-price-line"></div>
-                            <div class="dis-high-price">最高价</div>
+                            <input type="number" class="dis-high-price" placeholder="最高价">
                         </div>
+                        <div class="dis-price-section">商品销量</div>
                         <div class="dis-screen-select">
-                            <div class="dis-low-sales">最低销量</div>
+                            <input type="number" class="dis-low-sales" placeholder="最低销量">
                             <div class="dis-price-line"></div>
-                            <div class="dis-high-sales">最销量</div>
+                            <input type="number" class="dis-high-sales" placeholder="最高销量">
                         </div>
                         <div class="aui-list-item-inner">
-                            <label><input class="aui-radio" checked type="radio" name="radio2"> 退货免运费</label>
+                            <label><input class="aui-radio servenBack" type="checkbox" name="radio2"> 退货免运费</label>
                         </div>
+                        <div id="nmbConfirm">确定</div>
                     </div>
                 </div>
             </script>
