--- a/html/bindingtel.html
+++ b/html/bindingtel.html
@@ -25,15 +25,15 @@
             <input type="text" id="nmdPhone" type="number" maxLength=11 placeholder="输入手机号">
         </li>
         <li>
-            <p>图形验证码：</p>
+            <p>图验证：</p>
             <input type="text" id="code_input" value="" placeholder="输入验证">
             <div id="v_container" style="width: 100px;height: 50px;"></div>
         </li>
         <li>
             <p>验证码：</p>
-            <input type="text" placeholder="输入验证码" id="information">
+            <input type="text" placeholder="输入验证" id="information">
             <!--<div class="send-information" id="send-information"><span>发送验证码</span></div>-->
-            <input type="button" id="btn" value="获取验证码" onclick="sendemail()"/>
+            <input type="button" id="btn" style="width: 100px;height: 50px;" value="获取验证码" onclick="sendemail()"/>
         </li>
         <li class="bottom-border">
             <div id="Determine">
