处理详情页图片尺寸问题，处理我的商品页面进入详情页跳转-解决

--- a/html/myShop.html
+++ b/html/myShop.html
@@ -67,7 +67,7 @@
         <div id="dis-list-vessel">
             <script type="text/x-handlebars-template" id="my-shop-template">
                 {{#each products}}
-                <a href="goodsdetail.html?productid={{productId}}" class="display-box">
+                <a href="goodsdetail.html?productId={{productId}}" class="display-box">
                     <div class="dis-list-box" data-shopid="{{id}}" data-productid="{{productId}}">
                         <div class="dis-shop-img">
                             <img src="../images/lazy.gif" data-src="{{mainImageUrl}}" alt="">
